# nix-freedesktop-icons

./: Cargo.toml  README.md  flake.nix
benches/: simple_lookup.rs  tests.rs
src/: cache.rs  lib.rs
src/theme/: directories.rs  mod.rs  parse.rs  paths.rs
