[package]
name = "nix-freedesktop-icons"
version = "0.4.0"
edition = "2024"

license = "MIT"
description = "Nix compatible Icons lookup crate"
repository = "https://github.com/id3v1669/nix-freedestkop-icons"
readme = "README.md"
keywords = ["icons", "gui", "lookup", "nix"]

[dependencies]
dirs = "6.0.0"
thiserror = "2.0.18"
once_cell = "1.19.0"
xdg = "3.0.0"
tracing = "0.1.41"
ini_core = "0.2.0"

[dev-dependencies]
speculoos = "0.13.0"
linicon = "2.3.0"
gtk4 = "0.11.3"
criterion = "0.8.2"

[features]
default = []
local_tests = []

[[bench]]
name = "simple_lookup"
harness = false
